<resources>
    <string name="app_name">CokeToHome</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="unit" translatable="false">Unit :</string>
    <string name="mrp" translatable="false">MRP</string>
    <string name="offer_price" translatable="false">Offer Price</string>
    <string name="minappappu">మినపప్పు</string>
    <string name="kandipappu">కందిపప్పు</string>
    <string name="atukulu">అటుకులు</string>
    <string name="vepudu_shanaga_pappu">" వేపుడు సేనగప్పప్పు"</string>
    <string name="erra_nooka">ఎర్ర నూక</string>
    <string name="karachi_nooka">కరాచీ నూక</string>
    <string name="maida">మైదా</string>
    <string name="chaya_minapa_gullu">ఛాయ మినప గుళ్ళు</string>
    <string name="minapa_gullu">మినప గుళ్ళు</string>
    <string name="aata">ఆట</string>
    <string name="aashirwad_aata">ఆశీర్వాద్ ఆట</string>
    <string name="harmonium_aata">హార్మోనియం ఆట</string>
    <string name="salt">ఉప్పు</string>
    <string name="semiya">సేమ్యా</string>
    <string name="pacchi_chanaga_pappu">పచి చంగప పప్పు</string>
    <string name="banni_rava">బన్నీ రవ</string>
    <string name="vellullipayi">" వెల్లుల్లి"</string>
    <string name="endi_mirchi">ఏందీ మిర్చి</string>
    <string name="kabuli_shanagalu">కాబూలీ శనగలు</string>
    <string name="shanagalu">" వేరుశెనగ"</string>
    <string name="dhaniyalu">ధనియాలు</string>
    <string name="ghasagasalu">గసగసాలు</string>
    <string name="vaamu">వాము</string>
    <string name="menthulu">మెంతులు</string>
    <string name="aavalu">ఆవాలు</string>
    <string name="jilakarra">జిల్లాకర్ర</string>
    <string name="veru_shanaga_pappu">వేరు సేనగప్పప్పు</string>
    <string name="panchadaara">చక్కెర</string>
    <string name="pesarapappu">పెసర పప్పు</string>
    <string name="idly_rava">ఇడ్లీ రవ్వ</string>
    <string name="store_name" translatable="false">Store Name:</string>
    <string name="gst_in" translatable="false">GST IN:</string>
    <string name="phone_number" translatable="false">Phone Number:</string>
    <string name="coke_to_home" translatable="false">Coke To Home</string>
    <string name="item_name" translatable="false">Item Name</string>
    <string name="submit" translatable="false">Create Banner</string>
    <string name="store_owner_s_name" translatable="false">Store Owner\'s Name:</string>
    <string name="itemname">సరుకుల వివరాలు</string>
    <string name="unitheading">యూనిట్</string>
    <string name="price_heading">ధర</string>
    <string name="offer_price_heading">ఆఫర్ ధర</string>
    <string name="banner_html">banner.html</string>
    <string name="no_such_page" translatable="false">There is no such page&#8230;</string>
    <string name="genji_powder">గెంజి పొడి</string>
    <string name="download">Download</string>
    <string name="go_back">Go Back</string>

</resources>
