<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:background="@color/design_default_color_surface"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingTop="10dip"
    android:paddingRight="10dip"
    android:backgroundTint="#eeeeee"
    android:paddingBottom="10dip">

    <TextView
        android:id="@+id/i21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:paddingLeft="10dip"
        android:paddingTop="10dip"
        android:paddingRight="10dip"
        android:paddingBottom="10dip"
        android:text="@string/genji_powder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/u21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/unit"
        android:minWidth="80dip"
        android:layout_row="1"
        android:layout_column="0"
        android:paddingLeft="1dip"
        android:paddingTop="1dip"
        android:paddingRight="1dip"
        android:paddingBottom="1dip"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/p21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/mrp"
        android:minWidth="80dip"
        android:layout_row="1"
        android:layout_column="1"
        android:inputType="numberDecimal"
        android:paddingLeft="1dip"
        android:paddingTop="1dip"
        android:paddingRight="1dip"
        android:paddingBottom="1dip"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/op21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/offer_price"
        android:minWidth="80dip"
        android:layout_row="1"
        android:layout_column="2"
        android:inputType="numberDecimal"
        android:paddingLeft="1dip"
        android:paddingTop="1dip"
        android:paddingRight="1dip"
        android:paddingBottom="1dip"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

</GridLayout>
